<resources>
    <string name="app_name">DiscofferyTemp</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ss">SS</string>
    <string name="next">Next</string>
    <string name="lorem_ipsum_dolor_sit_amet_consectetur_adipiscin_adipiscing_elit">Lorem ipsum dolor sit amet, consectetur adipiscin adipiscing elit.</string>
    <string name="username">Username</string>
    <string name="input_your_username">Input Your Username</string>
    <string name="password">Password</string>
    <string name="lojin">Login</string>
    <string name="aceh_gayo">Confidence Aceh Gayo : %s %s</string>
    <string name="dampit">Confidence Dampit : %s %s</string>
    <string name="toraja">Confidence toraja : %s %s</string>
    <string name="judul_Artikel">Bahaya Meminum Kopi Terlalu Banyak </string>
    <string name="dapat_Lokasi">Dapatkan lokasi saat ini </string>
    <string name="explore_kopi">Let\'s Explore Coffee Shop</string>
    <string name="cari_Kopi">Mau kopi ini? Yuk cari di sekitarmu</string>
    <string name="isi_artikel"> PURE  NATURAL COFFEE
    Since 1963, we have scoured the world for the best coffee available anywhere and we expertly roast our beans in small batches for optimal flavor. We purchase our beans direct from coffee farmers building on decades-long relationships to ensure we get the top 1% of the best arabica beans in the world. So, we know where every coffee bean comes from. Now the same great coffee we use in our store locations are available in retail packages. Buy coffee online here.
    A S K COFFEE BEANS® brand’s high standards make our coffee uniquely and uniformly delicious no matter which location you visit, anywhere in the world. Our Master Roaster has employed state of the art coffee roasting techniques and expert instincts to preserve the beloved ritual of coffee drinking. You can enjoy our renowned coffees at home, school, the office or wherever travels take you. When you buy coffee online, choose from whole coffee beans, ground coffee, organic coffee, single origin coffee, flavored and special reserved coffees with a variety of roasts. And for those times you need good coffee quickly, check out our single serving coffee products too.</string>
    <string name="about"> Gayo coffee (English: Gayo coffee) is an arabica coffee variety which is one of the leading commodities originating from the Gayo Highlands, Central Aceh, Indonesia.</string>
    <string-array name="judul">
        <item>Salah seorang ulama dan khatib terkemuka di Masjid Besar Kasultanan Yogyakarta pada masa itu, dan ibu dari K.H. Ahmad Dahlan adalah puteri dari H. Ibrahim yang juga menjabat penghulu Kesultanan Ngayogyakarta Hadiningrat pada masa itu. KH. Ahmad Dahlan telah mempelopori kebangkitan ummat Islam untuk menyadari nasibnya sebagai bangsa terjajah yang masih harus belajar dan berbuat. </item>
        <item>Jenderal TNI Anumerta Ahmad Yani (juga dieja Achmad Yani; lahir di Purworejo, Jawa Tengah, 19 Juni 1922 – meninggal di Lubang Buaya, Jakarta, 1 Oktober 1965 pada umur 43 tahun) adalah komandan Tentara Nasional Indonesia Angkatan Darat, dan dibunuh oleh anggota Gerakan 30 September saat mencoba untuk menculik dia dari rumahnya.</item>
        <item>Sutomo (lahir di Surabaya, Jawa Timur, 3 Oktober 1920 – meninggal di Padang Arafah, Arab Saudi, 7 Oktober 1981 pada umur 61 tahun) lebih dikenal dengan sapaan akrab oleh rakyat sebagai Bung Tomo, adalah pahlawan yang terkenal karena peranannya dalam membangkitkan semangat rakyat untuk melawan kembalinya penjajah Belanda melalui tentara NICA, yang berakhir dengan pertempuran 10 November 1945 yang hingga kini diperingati sebagai Hari Pahlawan.</item>
        <item>Jenderal TNI (Purn.) Gatot Soebroto (lahir di Sumpiuh, Banyumas, Jawa Tengah, 10 Oktober 1907 – meninggal di Jakarta, 11 Juni 1962 pada umur 54 tahun) adalah tokoh perjuangan militer Indonesia dalam merebut kemerdekaan dan juga pahlawan nasional Indonesia. Ia dimakamkan di Ungaran, kabupaten Semarang.</item>
        <item>Raden Mas Soewardi Soerjaningrat (EBI: Suwardi Suryaningrat, sejak 1922 menjadi Ki Hadjar Dewantara, EBI: Ki Hajar Dewantara, beberapa menuliskan bunyi bahasa Jawanya dengan Ki Hajar Dewantoro; lahir di Pakualaman, 2 Mei 1889 – meninggal di Yogyakarta, 26 April 1959 pada umur 69 tahun; selanjutnya disingkat sebagai "Soewardi" atau "KHD") adalah aktivis pergerakan kemerdekaan Indonesia, kolumnis, politisi, dan pelopor pendidikan bagi kaum pribumi Indonesia dari zaman penjajahan Belanda. Ia adalah pendiri Perguruan Taman Siswa, suatu lembaga pendidikan yang memberikan kesempatan bagi para pribumi untuk bisa memperoleh hak pendidikan seperti halnya para priyayi maupun orang-orang Belanda.</item>
        <item>Dr.(HC) Drs. H. Mohammad Hatta (lahir dengan nama Mohammad Athar, dikenal sebagai Bung Hatta; lahir di Fort de Kock (sekarang Bukittinggi, Sumatera Barat), Hindia Belanda, 12 Agustus 1902 – meninggal di Jakarta, 14 Maret 1980 pada umur 77 tahun) adalah tokoh pejuang, negarawan, ekonom, dan juga Wakil Presiden Indonesia yang pertama. Ia bersama Soekarno memainkan peranan penting untuk memerdekakan bangsa Indonesia dari penjajahan Belanda sekaligus memproklamirkannya pada 17 Agustus 1945. Ia juga pernah menjabat sebagai Perdana Menteri dalam Kabinet Hatta I, Hatta II, dan RIS. Ia mundur dari jabatan wakil presiden pada tahun 1956, karena berselisih dengan Presiden Soekarno. Hatta juga dikenal sebagai Bapak Koperasi Indonesia.</item>
        <item>Jenderal Besar Raden Soedirman (EYD: Sudirman; lahir 24 Januari 1916 – meninggal 29 Januari 1950 pada umur 34 tahun) adalah seorang perwira tinggi Indonesia pada masa Revolusi Nasional Indonesia. Menjadi panglima besar Tentara Nasional Indonesia pertama, ia secara luas terus dihormati di Indonesia. Terlahir dari pasangan rakyat biasa di Purbalingga, Hindia Belanda, Soedirman diadopsi oleh pamannya yang seorang priyayi. Setelah keluarganya pindah ke Cilacap pada tahun 1916, Soedirman tumbuh menjadi seorang siswa rajin; ia sangat aktif dalam kegiatan ekstrakurikuler, termasuk mengikuti program kepanduan yang dijalankan oleh organisasi Islam Muhammadiyah. Saat di sekolah menengah, Soedirman mulai menunjukkan kemampuannya dalam memimpin dan berorganisasi, dan dihormati oleh masyarakat karena ketaatannya pada Islam. Setelah berhenti kuliah keguruan, pada 1936 ia mulai bekerja sebagai seorang guru, dan kemudian menjadi kepala sekolah, di sekolah dasar Muhammadiyah; ia juga aktif dalam kegiatan Muhammadiyah lainnya dan menjadi pemimpin Kelompok Pemuda Muhammadiyah pada tahun 1937. Setelah Jepang menduduki Hindia Belanda pada 1942, Soedirman tetap mengajar. Pada tahun 1944, ia bergabung dengan tentara Pembela Tanah Air (PETA) yang disponsori Jepang, menjabat sebagai komandan batalion di Banyumas. Selama menjabat, Soedirman bersama rekannya sesama prajurit melakukan pemberontakan, namun kemudian diasingkan ke Bogor.</item>
        <item>Dr.(H.C.) Ir. H. Soekarno (ER, EYD: Sukarno, nama lahir: Koesno Sosrodihardjo) (lahir di Surabaya, Jawa Timur, 6 Juni 1901 – meninggal di Jakarta, 21 Juni 1970 pada umur 69 tahun) adalah Presiden pertama Republik Indonesia yang menjabat pada periode 1945–1967. Ia memainkan peranan penting dalam memerdekakan bangsa Indonesia dari penjajahan Belanda. Ia adalah Proklamator Kemerdekaan Indonesia (bersama dengan Mohammad Hatta) yang terjadi pada tanggal 17 Agustus 1945. Soekarno adalah yang pertama kali mencetuskan konsep mengenai Pancasila sebagai dasar negara Indonesia dan ia sendiri yang menamainya.</item>
        <item>Prof. Mr. Dr. Soepomo (Ejaan Soewandi: Supomo; lahir di Sukoharjo, Jawa Tengah, 22 Januari 1903 – meninggal di Jakarta, 12 September 1958 pada umur 55 tahun) adalah seorang pahlawan nasional Indonesia. Soepomo dikenal sebagai arsitek Undang-undang Dasar 1945, bersama dengan Muhammad Yamin dan Soekarno.</item>
    </string-array>
    <string name="informasi_kopi">Informasi: kopi aceh gayo</string>
    <string name="banner_kopi">banner kopi</string>
    <string name="title">Bahaya Meminum Kopi Terlalu Banyak</string>
    <string name="sindo_news">Sindo News</string>
    <string name="_2022_05_12">2022 – 05 – 12</string>
    <string name="jakarta_terancam_banjir_pada_tahun_2033">Jakarta Terancam Banjir Pada tahun 2033</string>
    <string name="just_for_you">JUST FOR YOU</string>
    <string name="read">Read</string>
    <string name="sed_vel_turpis_adipiscing_penatibus_orci_neque_erat_sed_fermentum_ipsum_vel_quis_quam_nunc_etiam_dui_tortor_non_in_aliquam_lacinia_tempor">Sed vel turpis adipiscing penatibus orci neque. Erat sed fermentum ipsum vel quis quam. Nunc etiam dui tortor, non in aliquam lacinia tempor.</string>
    <string name="articles">Articles</string>
    <string name="buy_this_coffee">Buy This Coffee</string>
    <string name="bahaya_terlalu_sering_meminum_kopi_lorem_ipsum_dolor_sit_amet_consectetur_adipiscing_elit_nulla_nec_lectus_a_dui_malesuada_condimentum_pellentesque_ac_metus_at_ipsum_facilisis_accumsan_congue_in_lorem_proin_et_euismod_nisl_sed_orci_enim_dapibus_eget_metus_i">Bahaya Terlalu Sering Meminum Kopi Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla nec lectus a dui malesuada condimentum. Pellentesque ac metus at ipsum facilisis accumsan congue in lorem. Proin et euismod nisl. Sed orci enim, dapibus eget metus i</string>
    <string name="melancarkan_darah">- Melancarkan Darah</string>
    <string name="coffee_information">Coffee Information</string>
    <string name="about_coffee">About Coffee</string>
    <string name="price_fragment">PRICE FRAGMENT</string>
    <string name="arabica">Arabica</string>
    <string name="aceh_indonesia">Aceh, Indonesia</string>
    <string name="rp_15_000_rp_20_000">Rp. 15.000 - Rp. 20.000</string>
    <string name="welcome">Welcome</string>
    <string name="discoffery">Discoffery</string>
    <string name="popular_coffee">Popular Coffee</string>
    <string name="see_details">See Details</string>
    <string name="detail_price">Detail Price</string>
    <string name="statistik">Statistik</string>
    <string name="year">Year</string>
    <string name="rp_35_000">Rp. 35.000</string>
    <string name="acehgayo">Aceh Gayo</string>
    <string name="dampitt">Dampit</string>
    <string name="tab_text_1">Home</string>
    <string name="tab_text_2">Profile</string>
    <string name="tab_text_3">Setting</string>
    <string name="content_tab_home">Welcome Home</string>
    <string name="content_tab_profile">Change your Profile here</string>
    <string name="content_tab_text">This is Tab %1$d</string>
    <string name="price_prediction_for_today">Price Prediction For Today</string>
    <string name="scan_your_coffee_now">Scan Your Coffee Now !</string>
    <string name="current_price">Current Price</string>
    <string name="price">Price</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="previous">Previous</string>
    <string name="hi">Hi,</string>
    <string name="see_detail_coffee_beans_price">See Detail Coffee Beans Price</string>
    <string name="coffee_beans_price_predictions">Coffee Beans Price Predictions</string>
    <string name="phone_number">Phone Number</string>
    <string name="enter_your_phone_number">Enter Your Phone Number</string>
    <string name="name">Name</string>
    <string name="bangkit_team_discoffery">Bangkit Team - Discoffery</string>
    <string name="update_profile">Update Profile</string>
    <string name="_085170539399">085170539399</string>
    <string name="profile_page">Profile Page</string>
    <string name="logout">Logout</string>
    <string name="scan_and_identify_coffee_beans">Scan And Identify Coffee Beans</string>
</resources>