<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bgprofile"
    tools:context=".ProfileActivity">

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/bgprof" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerInParent="true"
            android:layout_marginTop="110dp"
            android:src="@drawable/prof" />
    </RelativeLayout>


    <TextView
        android:id="@+id/tvName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:letterSpacing="0.1"
        android:layout_marginTop="18dp"
        android:textColor="@color/black"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/name"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout" />

    <EditText
        android:id="@+id/etUsername"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:drawableStart="@drawable/user"
        android:drawablePadding="20dp"
        android:text="@string/bangkit_team_discoffery"
        android:background="@drawable/shapeinput"
        android:fontFamily="@font/poppins_light"
        android:hint="@string/enter_your_phone_number"
        android:inputType="text"
        android:paddingStart="20dp"
        android:layout_marginTop="10dp"
        android:textColor="@color/black"
        android:textColorHint="#d3d3d3"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvName" />

    <TextView
        android:id="@+id/tvPhone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/phone_number"
        android:layout_marginTop="18dp"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etUsername" />

    <EditText
        android:id="@+id/etPhone"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:drawableStart="@drawable/call"
        android:drawablePadding="20dp"
        android:text="@string/_085170539399"
        android:background="@drawable/shapeinput"
        android:fontFamily="@font/poppins_light"
        android:hint="@string/_085170539399"
        android:inputType="number"
        android:editable="false"
        android:paddingStart="20dp"
        android:layout_marginTop="10dp"
        android:textColor="@color/black"
        android:textColorHint="#d3d3d3"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvPhone" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="@dimen/_280sdp"
        android:layout_height="48dp"
        android:layout_marginStart="32dp"
        android:letterSpacing="0.1"
        android:layout_marginEnd="32dp"
        android:alpha="1"
        android:background="@drawable/shape_button"
        android:fontFamily="@font/poppins"
        android:text="@string/update_profile"

        android:textAlignment="center"
        android:textColor="@color/c5"
        android:layout_marginTop="18dp"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etPhone" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/poppins"
        android:letterSpacing="0.1"
        android:text="@string/profile_page"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RelativeLayout
        android:id="@+id/imageView5"
        android:layout_width="@dimen/_280sdp"
        android:layout_height="48dp"
        android:background="@drawable/shapeinput"
        android:layout_marginTop="12dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginButton">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tvgugel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/poppins_medium"
                android:gravity="center|center_horizontal|center_vertical"
                android:letterSpacing="0.2"
                android:text="@string/logout"
                android:textAlignment="center"
                android:textColor="#FF0000"
                android:textSize="18sp"

                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </RelativeLayout>



</androidx.constraintlayout.widget.ConstraintLayout>