<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragment.Home">


    <TextView
        android:id="@+id/CoffeePrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/popular_coffee"
        android:textColor="@color/black"
        android:layout_marginTop="90dp"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:src="@drawable/zehaha"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/CoffeePrice">

    </ImageView>

    <ImageView
        android:id="@+id/statis"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:src="@drawable/statsitsi"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView11">

    </ImageView>

    <ImageView
        android:id="@+id/imageView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:src="@drawable/bb"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/PricePage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/detail_price"
        android:textColor="@color/black"
        android:layout_marginStart="20dp"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView12"
        app:layout_constraintStart_toEndOf="@+id/imageView12"
        app:layout_constraintTop_toTopOf="@+id/imageView12" />

    <TextView
        android:id="@+id/statistik"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/statistik"
        android:textColor="@color/c1"
        android:textSize="16sp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/statis" />

    <TextView
        android:id="@+id/yearTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:fontFamily="@font/poppins"
        android:text="@string/year"
        android:textColor="@color/c1"
        android:layout_marginTop="10dp"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/statistik" />

    <TextView
        android:id="@+id/tvYear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/poppins"
        android:layout_marginEnd="30dp"
        android:text="@string/rp_35_000"
        android:textColor="@color/c1"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/statistik" />

    <ImageView
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:src="@drawable/divider"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="@+id/tvYear"
        app:layout_constraintStart_toStartOf="@+id/yearTv"
        app:layout_constraintTop_toBottomOf="@+id/yearTv" />



</androidx.constraintlayout.widget.ConstraintLayout>