<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/homeFragment"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="60dp"
    android:background="@color/white"
    tools:context=".fragment.Home">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">



        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="40dp"
            android:letterSpacing="0.1"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/hi"
            android:textColor="@color/black"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/welcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="40dp"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/welcome"
            android:textColor="@color/black"
            android:letterSpacing="0.1"
            android:textSize="12sp"
            app:layout_constraintStart_toEndOf="@+id/textView6"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/discoffery"
            android:textColor="@color/black"
            android:textSize="15sp"
            app:layout_constraintStart_toStartOf="@+id/textView6"
            app:layout_constraintTop_toBottomOf="@+id/textView6" />

        <ImageView
            android:id="@+id/profileImage"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginEnd="20dp"
            android:src="@drawable/prof"
            app:layout_constraintBottom_toBottomOf="@+id/tvName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/welcome">

        </ImageView>


        <TextView
            android:id="@+id/scanPhoto"
            android:layout_width="match_parent"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_height="50dp"
            android:layout_marginTop="32dp"
            android:gravity="center_vertical"
            android:letterSpacing="0.1"
            android:textColor="@color/c1"
            android:paddingStart="10dp"
            android:drawablePadding="16dp"
            android:textSize="14sp"
            android:fontFamily="@font/poppins_medium"
            android:textStyle="bold"
            android:drawableLeft="@drawable/sken"
            android:text="@string/scan_and_identify_coffee_beans"
            android:background="@drawable/shape"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvName" />


        <TextView
            android:id="@+id/CoffeePrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="32dp"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/coffee_beans_price_predictions"
            android:textColor="@color/black"
            android:textSize="@dimen/_12sdp"
            android:letterSpacing="0.1"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/scanPhoto" />




        <com.github.mikephil.charting.charts.LineChart
            android:id="@+id/lineChart"
            android:layout_width="match_parent"
            android:layout_marginEnd="30dp"
            android:layout_height="250dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="10dp"
            android:src="@drawable/statsitsi"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/CoffeePrice" />

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@+id/lineChart"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.696"
            tools:visibility="visible" />

        <ImageView
            android:id="@+id/divider"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:src="@drawable/divider"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/detailprice" />


        <LinearLayout
            android:id="@+id/detailprice"
            android:layout_width="@dimen/_280sdp"
            android:layout_height="48dp"
            android:layout_marginTop="18dp"
            android:background="@drawable/bgbutton"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lineChart">

            <TextView
                android:id="@+id/home_to_price"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:drawablePadding="@dimen/_16sdp"
                android:fontFamily="@font/poppins_medium"
                android:gravity="center"
                android:text="@string/see_detail_coffee_beans_price"
                android:textAlignment="center"
                android:textColor="@color/c1"
                android:textSize="@dimen/_12sdp"
                app:drawableStartCompat="@drawable/send">

            </TextView>
        </LinearLayout>


        <TextView
            android:id="@+id/article"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/articles"
            android:textColor="@color/black"
            android:textSize="@dimen/_14sdp"
            android:letterSpacing="0.1"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/divider" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_articles"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/article"
            tools:listitem="@layout/utem_article" />




    </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>